Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -25,12 +25,15 @@
       <section>
         <h3>Consensus analysis of many single-molecule FRET time series</h3>
 
-<p>ebFRET is a library written in Matlab for the analysis of single-molecule FRET time series with hidden Markov models. It the successor of <a href="vbfret.sourceforge.net">vbFRET</a>, which it improves upon by allowing analysis of multiple time series at once. This approach, known as <em>empirical Bayes</em>, is both more accurate and statistically robust, and is suitable to more advanced experimental use cases, such as the detection of kinetically distinct sub-populations in an experiment. </p>
+<p>ebFRET is a library written in Matlab for the analysis of single-molecule FRET time series with hidden Markov models. </p>
+
+<p>It is the successor of <a href="vbfret.sourceforge.net">vbFRET</a>, which it improves upon by performing combined analysis of multiple time series at once. This approach, known as <em>empirical Bayes</em>, is both more accurate and statistically robust. It also enables more advanced analysis use cases such as sub-population detection.</p>
 
 <h3>Read the Paper</h3>
 
-<p><em>Hierarchically-coupled hidden Markov models for learning kinetic rates from single-molecule data</em>
-Jan-Willem van de Meent (<a href="https://github.com/jwvdm" class="user-mention">@jwvdm</a>), Jonathan Bronson, Frank Wood, Ruben Gonzalez, Chris Wiggins (<a href="https://github.com/chrishwiggins" class="user-mention">@chrishwiggins</a>)</p>
+<p><em>Hierarchically-coupled hidden Markov models for learning kinetic rates from single-molecule data.</em>
+Jan-Willem van de Meent (<a href="https://github.com/jwvdm" class="user-mention">@jwvdm</a>), Jonathan Bronson, Frank Wood, Ruben Gonzalez, Chris Wiggins (<a href="https://github.com/chrishwiggins" class="user-mention">@chrishwiggins</a>)
+<a href="https://github.com/ebfret/paper">[pdf]</a></p>
 
 <h3>Example Usage</h3>
 
