Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <pre><code>data = load_fret('my_data.dat');
 eb = eb_fret(data.fret, [2,3,4], 10);
-tracePlotter(data.fret, 'vit', eb.vit);
+tracePlotter(data.fret, 'vit', eb(3).vit);
 </code></pre>
 
 <h3>Get the Source</h3>
