Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
       <section>
         <h3>Consensus analysis of many single-molecule FRET time series</h3>
 
+<p><img src="https://raw.github.com/ebfret/paper-icml/master/figures/fig_example_traces_500dpi.png" alt="Example Traces"></p>
+
 <p>ebFRET is a library written in Matlab for the analysis of single-molecule FRET time series with hidden Markov models. </p>
 
 <p>It is the successor of <a href="http://vbfret.sourceforge.net">vbFRET</a>, which it improves upon by performing combined analysis of multiple time series at once. This approach, known as <em>empirical Bayes</em>, is both more accurate and statistically robust. It also enables more advanced analysis use cases such as sub-population detection.</p>
+
+<p><img src="https://raw.github.com/ebfret/paper-icml/master/figures/fig_accuracy_vs_noise_v2_500dpi.png" alt="Inference Accuracy"></p>
 
 <h3>Example Usage</h3>
 
