Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -28,16 +28,14 @@
 
 <p>ebFRET is a library written in Matlab for the analysis of single-molecule FRET time series with hidden Markov models. </p>
 
-<p><img src="https://raw.github.com/ebfret/paper-icml/master/figures/fig_example_traces_500dpi.png" alt="Example Traces"></p>
+<p><img src="images/ebfret_mainwindow.png" alt="Example Traces"></p>
 
 <p>It is the successor of <a href="http://vbfret.sourceforge.net">vbFRET</a>, which it improves upon by performing combined analysis of multiple time series at once. This approach, known as <em>empirical Bayes</em>, is both more accurate and statistically robust. It also enables more advanced analysis use cases such as sub-population detection.</p>
-
-<p><img src="https://raw.github.com/ebfret/paper-icml/master/figures/fig_accuracy_vs_noise_v2_500dpi.png" alt="Inference Accuracy"></p>
 
 <h3>
 <a name="get-the-source" class="anchor" href="#get-the-source"><span class="octicon octicon-link"></span></a>Get the Source</h3>
 
-<p>The ebFRET source code (with graphical user interface) can be downloaded here [<a href="https://github.com/ebfret/ebfret-gui">git</a>; <a href="https://github.com/ebfret/ebfret-gui/archive/master.zip">zip</a>]. Please see README for installation instructions. The legacy command-line version of ebFRET is still available as well [<a href="https://github.com/ebfret/ebfret-legacy">git</a>; <a href="https://github.com/ebfret/ebfret-legacy/archive/master.zip">zip</a>].</p>
+<p>The ebFRET source code (with graphical user interface) can be downloaded here [<a href="https://github.com/ebfret/ebfret-gui">git</a>; <a href="https://github.com/ebfret/ebfret-gui/archive/master.zip">zip</a>]. Please see README for installation instructions.  A command-line version of the code is also available for advanced analysis tasks, such as detection of subpopulations, which cannot be directly accomplished in the GUI [<a href="https://github.com/ebfret/ebfret-script">git</a>; <a href="https://github.com/ebfret/ebfret-script/archive/master.zip">zip</a>].</p>
 
 <h3>
 <a name="read-the-paper" class="anchor" href="#read-the-paper"><span class="octicon octicon-link"></span></a>Read the Paper</h3>
