--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>ebFRET by ebfret</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="ebFRET : ebFRET performs combined analysis on multiple single-molecule FRET time series to learn a set of rates and states " />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>ebFRET</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>ebFRET</h1>
-        <p>ebFRET performs combined analysis on multiple single-molecule FRET time series to learn a set of rates and states </p>
 
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/ebfret">View on GitHub</a>
 
-        <p class="view"><a href="https://github.com/ebfret">View My GitHub Profile</a></p>
+          <h1 id="project_title">ebFRET</h1>
+          <h2 id="project_tagline">ebFRET performs combined analysis on multiple single-molecule FRET time series to learn a set of rates and states </h2>
 
-      </header>
-      <section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h3>
 <a name="consensus-analysis-of-many-single-molecule-fret-time-series" class="anchor" href="#consensus-analysis-of-many-single-molecule-fret-time-series"><span class="octicon octicon-link"></span></a>Consensus analysis of many single-molecule FRET time series</h3>
 
@@ -35,7 +39,9 @@
 <h3>
 <a name="get-the-source" class="anchor" href="#get-the-source"><span class="octicon octicon-link"></span></a>Get the Source</h3>
 
-<p>The ebFRET source code (with graphical user interface) can be downloaded here [<a href="https://github.com/ebfret/ebfret-gui">git</a>; <a href="https://github.com/ebfret/ebfret-gui/archive/master.zip">zip</a>]. Please see README for installation instructions.  A command-line version of the code is also available for advanced analysis tasks, such as detection of subpopulations, which cannot be directly accomplished in the GUI [<a href="https://github.com/ebfret/ebfret-script">git</a>; <a href="https://github.com/ebfret/ebfret-script/archive/master.zip">zip</a>].</p>
+<p>The ebFRET source code (with graphical user interface) can be downloaded here [<a href="https://github.com/ebfret/ebfret-gui">git</a>; <a href="https://github.com/ebfret/ebfret-gui/archive/v1.0.zip">zip</a>]. Please see <a href="https://github.com/ebfret/ebfret-gui/blob/master/README.md">README</a> and <a href="https://github.com/ebfret/ebfret-gui/blob/master/documentation/ebfret_user_guide.pdf">User Guide</a> for installation instructions.  </p>
+
+<p>A command-line version of the code is also available for advanced analysis tasks, such as detection of subpopulations, which cannot be directly accomplished in the GUI [<a href="https://github.com/ebfret/ebfret-script">git</a>; <a href="https://github.com/ebfret/ebfret-script/archive/master.zip">zip</a>].</p>
 
 <h3>
 <a name="read-the-paper" class="anchor" href="#read-the-paper"><span class="octicon octicon-link"></span></a>Read the Paper</h3>
@@ -43,11 +49,16 @@
 <p><em>``Hierarchically-coupled hidden Markov models for learning kinetic rates from single-molecule data.''</em>
 Jan-Willem van de Meent (<a href="https://github.com/jwvdm" class="user-mention">@jwvdm</a>), Jonathan Bronson, Frank Wood, Ruben Gonzalez, Chris Wiggins. Accepted at <a href="http://icml.cc/2013/">ICML 2013</a> [<a href="https://github.com/ebfret/paper-icml/raw/master/vandemeent_icml_2013.pdf">pdf</a>]</p>
       </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
