--- a/index.html
+++ b/index.html
@@ -1,32 +1,28 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="ebFRET : ebFRET performs combined analysis on multiple single-molecule FRET time series to learn a set of rates and states " />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>ebFRET by ebfret</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>ebFRET</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>ebFRET</h1>
+        <p>ebFRET performs combined analysis on multiple single-molecule FRET time series to learn a set of rates and states </p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/ebfret">View on GitHub</a>
 
-          <h1 id="project_title">ebFRET</h1>
-          <h2 id="project_tagline">ebFRET performs combined analysis on multiple single-molecule FRET time series to learn a set of rates and states </h2>
+        <p class="view"><a href="https://github.com/ebfret">View My GitHub Profile</a></p>
 
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      </header>
+      <section>
         <h3>
 <a name="consensus-analysis-of-many-single-molecule-fret-time-series" class="anchor" href="#consensus-analysis-of-many-single-molecule-fret-time-series"><span class="octicon octicon-link"></span></a>Consensus analysis of many single-molecule FRET time series</h3>
 
@@ -49,16 +45,11 @@
 <p><em>``Hierarchically-coupled hidden Markov models for learning kinetic rates from single-molecule data.''</em>
 Jan-Willem van de Meent (<a href="https://github.com/jwvdm" class="user-mention">@jwvdm</a>), Jonathan Bronson, Frank Wood, Ruben Gonzalez, Chris Wiggins. Accepted at <a href="http://icml.cc/2013/">ICML 2013</a> [<a href="https://github.com/ebfret/paper-icml/raw/master/vandemeent_icml_2013.pdf">pdf</a>]</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
