Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <p><img src="images/ebfret_mainwindow.png" alt="Example Traces"></p>
 
-<p>It is the successor of <a href="http://vbfret.sourceforge.net">vbFRET</a>, which it improves upon by performing combined analysis of multiple time series at once. This approach, known as <em>empirical Bayes</em>, is both more accurate and statistically robust. It also enables more advanced analysis use cases such as sub-population detection.</p>
+<p>ebFRET is the successor of <a href="http://vbfret.sourceforge.net">vbFRET</a>, which it improves upon by performing combined analysis of multiple time series at once. This approach, known as <em>empirical Bayes</em>, is both more accurate and statistically robust. It also enables more advanced analysis use cases such as sub-population detection.</p>
 
 <h3>
 <a name="get-the-source" class="anchor" href="#get-the-source"><span class="octicon octicon-link"></span></a>Get the Source</h3>
@@ -40,10 +40,13 @@
 <p>A command-line version of the code is also available for advanced analysis tasks, such as detection of subpopulations, which cannot be directly accomplished in the GUI [<a href="https://github.com/ebfret/ebfret-script">git</a>; <a href="https://github.com/ebfret/ebfret-script/archive/master.zip">zip</a>].</p>
 
 <h3>
-<a name="read-the-paper" class="anchor" href="#read-the-paper"><span class="octicon octicon-link"></span></a>Read the Paper</h3>
+<a name="read-the-papers" class="anchor" href="#read-the-papers"><span class="octicon octicon-link"></span></a>Read the Papers</h3>
 
 <p><em>``Hierarchically-coupled hidden Markov models for learning kinetic rates from single-molecule data.''</em>
-Jan-Willem van de Meent (<a href="https://github.com/jwvdm" class="user-mention">@jwvdm</a>), Jonathan Bronson, Frank Wood, Ruben Gonzalez, Chris Wiggins. Accepted at <a href="http://icml.cc/2013/">ICML 2013</a> [<a href="https://github.com/ebfret/paper-icml/raw/master/vandemeent_icml_2013.pdf">pdf</a>]</p>
+Jan-Willem van de Meent (<a href="https://github.com/jwvdm" class="user-mention">@jwvdm</a>), Jonathan E. Bronson, Frank Wood, Ruben L. Gonzalez Jr., Chris H. Wiggins. <a href="http://icml.cc/2013/">International Conference on Machine Learning 2013</a> [<a href="https://github.com/ebfret/paper-icml/raw/master/vandemeent_icml_2013.pdf">pdf</a>]</p>
+
+<p><em>``Empirical Bayes methods enable advanced population-level analyses of single-molecule FRET experiments.''</em>
+Jan-Willem van de Meent (<a href="https://github.com/jwvdm" class="user-mention">@jwvdm</a>), Jonathan E. Bronson, Chris H. Wiggins, Chris H. Wiggins, Ruben L. Gonzalez Jr. Accepted for publication in the <a href="http://www.cell.com/biophysj/home">Biophysical Journal</a> [<a href="https://github.com/ebfret/paper-bpj/raw/master/vandemeent_bpj_2014_preprint.pdf">pdf</a>]</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
