Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 Jan-Willem van de Meent (<a href="https://github.com/jwvdm" class="user-mention">@jwvdm</a>), Jonathan E. Bronson, Frank Wood, Ruben L. Gonzalez Jr., Chris H. Wiggins. <a href="http://icml.cc/2013/">International Conference on Machine Learning 2013</a> [<a href="https://github.com/ebfret/paper-icml/raw/master/vandemeent_icml_2013.pdf">pdf</a>]</p>
 
 <p><em>``Empirical Bayes methods enable advanced population-level analyses of single-molecule FRET experiments.''</em>
-Jan-Willem van de Meent (<a href="https://github.com/jwvdm" class="user-mention">@jwvdm</a>), Jonathan E. Bronson, Chris H. Wiggins, Chris H. Wiggins, Ruben L. Gonzalez Jr. Accepted for publication in the <a href="http://www.cell.com/biophysj/home">Biophysical Journal</a> [<a href="https://github.com/ebfret/paper-bpj/raw/master/vandemeent_bpj_2014_preprint.pdf">pdf</a>]</p>
+Jan-Willem van de Meent (<a href="https://github.com/jwvdm" class="user-mention">@jwvdm</a>), Jonathan E. Bronson, Chris H. Wiggins, Chris H. Wiggins, Ruben L. Gonzalez Jr. Accepted for publication in the <a href="http://www.cell.com/biophysj/home">Biophysical Journal</a> [<a href="pdf/vandemeent_bpj_2014_preprint.pdf">pre-print</a>; <a href="pdf/vandemeent_bpj_2014_supplementary.pdf">supplementary</a>]</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
