Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -40,13 +40,20 @@
 <p>A command-line version of the code is also available for advanced analysis tasks, such as detection of subpopulations, which cannot be directly accomplished in the GUI [<a href="https://github.com/ebfret/ebfret-script">git</a>; <a href="https://github.com/ebfret/ebfret-script/archive/master.zip">zip</a>].</p>
 
 <h3>
-<a name="read-the-papers" class="anchor" href="#read-the-papers"><span class="octicon octicon-link"></span></a>Read the Papers</h3>
+<a name="papers" class="anchor" href="#papers"><span class="octicon octicon-link"></span></a>Papers</h3>
 
 <p><em>``Hierarchically-coupled hidden Markov models for learning kinetic rates from single-molecule data.''</em>
 Jan-Willem van de Meent (<a href="https://github.com/jwvdm" class="user-mention">@jwvdm</a>), Jonathan E. Bronson, Frank Wood, Ruben L. Gonzalez Jr., Chris H. Wiggins. <a href="http://icml.cc/2013/">International Conference on Machine Learning 2013</a> [<a href="https://github.com/ebfret/paper-icml/raw/master/vandemeent_icml_2013.pdf">pdf</a>]</p>
 
 <p><em>``Empirical Bayes methods enable advanced population-level analyses of single-molecule FRET experiments.''</em>
 Jan-Willem van de Meent (<a href="https://github.com/jwvdm" class="user-mention">@jwvdm</a>), Jonathan E. Bronson, Chris H. Wiggins, Chris H. Wiggins, Ruben L. Gonzalez Jr. Accepted for publication in the <a href="http://www.cell.com/biophysj/home">Biophysical Journal</a> [<a href="pdf/vandemeent_bpj_2014_preprint.pdf">pre-print</a>; <a href="pdf/vandemeent_bpj_2014_supplementary.pdf">supplementary</a>]</p>
+
+<h3>
+<a name="slides" class="anchor" href="#slides"><span class="octicon octicon-link"></span></a>Slides</h3>
+
+<p><em>``Learning Kinetic Models from Single-Molecule Experiments''</em>, ICML 2013 [<a href="pdf/jwvdm_icml_spotlight.pdf">pdf</a>] </p>
+
+<p><em>``Learning Kinetic Pathways from Single-Molecule FRET Measurements''</em>, Columbia 2012 [<a href="pdf/jwvdm_ibio_columbia.pdf">pdf</a>]</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
