Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </header>
       <section>
         <h3>
-<a name="consensus-analysis-of-many-single-molecule-fret-time-series" class="anchor" href="#consensus-analysis-of-many-single-molecule-fret-time-series"><span class="octicon octicon-link"></span></a>Consensus analysis of many single-molecule FRET time series</h3>
+<a id="consensus-analysis-of-many-single-molecule-fret-time-series" class="anchor" href="#consensus-analysis-of-many-single-molecule-fret-time-series" aria-hidden="true"><span class="octicon octicon-link"></span></a>Consensus analysis of many single-molecule FRET time series</h3>
 
 <p>ebFRET is a library written in Matlab for the analysis of single-molecule FRET time series with hidden Markov models. </p>
 
@@ -33,14 +33,14 @@
 <p>ebFRET is the successor of <a href="http://vbfret.sourceforge.net">vbFRET</a>, which it improves upon by performing combined analysis of multiple time series at once. This approach, known as <em>empirical Bayes</em>, is both more accurate and statistically robust. It also enables more advanced analysis use cases such as sub-population detection.</p>
 
 <h3>
-<a name="get-the-source" class="anchor" href="#get-the-source"><span class="octicon octicon-link"></span></a>Get the Source</h3>
+<a id="get-the-source" class="anchor" href="#get-the-source" aria-hidden="true"><span class="octicon octicon-link"></span></a>Get the Source</h3>
 
-<p>The ebFRET source code (with graphical user interface) can be downloaded here [<a href="https://github.com/ebfret/ebfret-gui">git</a>; <a href="https://github.com/ebfret/ebfret-gui/releases%5D.%20Please%20see%20%5BREADME%5D(https://github.com/ebfret/ebfret-gui/blob/master/README.md">zip</a> and <a href="https://github.com/ebfret/ebfret-gui/blob/master/documentation/ebfret_user_guide.pdf?raw=true">User Guide</a> for installation instructions.  </p>
+<p>The ebFRET source code (with graphical user interface) can be downloaded here [<a href="https://github.com/ebfret/ebfret-gui">git</a>; [zip](<a href="https://github.com/ebfret/ebfret-gui/releases/">https://github.com/ebfret/ebfret-gui/releases/</a>]. Please see <a href="https://github.com/ebfret/ebfret-gui/blob/master/README.md">README</a> and <a href="https://github.com/ebfret/ebfret-gui/blob/master/documentation/ebfret_user_guide.pdf?raw=true">User Guide</a> for installation instructions.  </p>
 
 <p>A command-line version of the code is also available for advanced analysis tasks, such as detection of subpopulations, which cannot be directly accomplished in the GUI [<a href="https://github.com/ebfret/ebfret-script">git</a>; <a href="https://github.com/ebfret/ebfret-script/archive/master.zip">zip</a>].</p>
 
 <h3>
-<a name="papers" class="anchor" href="#papers"><span class="octicon octicon-link"></span></a>Papers</h3>
+<a id="papers" class="anchor" href="#papers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Papers</h3>
 
 <p><em>``Hierarchically-coupled hidden Markov models for learning kinetic rates from single-molecule data.''</em>
 Jan-Willem van de Meent (<a href="https://github.com/jwvdm" class="user-mention">@jwvdm</a>), Jonathan E. Bronson, Frank Wood, Ruben L. Gonzalez Jr., Chris H. Wiggins. <a href="http://icml.cc/2013/">International Conference on Machine Learning 2013</a> [<a href="https://github.com/ebfret/paper-icml/raw/master/vandemeent_icml_2013.pdf">pdf</a>]</p>
@@ -49,7 +49,7 @@ Jan-Willem van de Meent (<a href="https://github.com/jwvdm" class="user-mention"
 Jan-Willem van de Meent (<a href="https://github.com/jwvdm" class="user-mention">@jwvdm</a>), Jonathan E. Bronson, Chris H. Wiggins, Chris H. Wiggins, Ruben L. Gonzalez Jr. Accepted for publication in the <a href="http://www.cell.com/biophysj/home">Biophysical Journal</a> [<a href="pdf/vandemeent_bpj_2014_preprint.pdf">pre-print</a>; <a href="pdf/vandemeent_bpj_2014_supplementary.pdf">supplementary</a>]</p>
 
 <h3>
-<a name="slides" class="anchor" href="#slides"><span class="octicon octicon-link"></span></a>Slides</h3>
+<a id="slides" class="anchor" href="#slides" aria-hidden="true"><span class="octicon octicon-link"></span></a>Slides</h3>
 
 <p><em>``Learning Kinetic Models from Single-Molecule Experiments''</em>, ICML 2013 [<a href="pdf/jwvdm_icml_spotlight.pdf">pdf</a>] </p>
 
