Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <h3>
 <a id="get-the-source" class="anchor" href="#get-the-source" aria-hidden="true"><span class="octicon octicon-link"></span></a>Get the Source</h3>
 
-<p>The ebFRET source code (with graphical user interface) can be downloaded here [<a href="https://github.com/ebfret/ebfret-gui">git</a>; [zip](<a href="https://github.com/ebfret/ebfret-gui/releases/">https://github.com/ebfret/ebfret-gui/releases/</a>]. Please see <a href="https://github.com/ebfret/ebfret-gui/blob/master/README.md">README</a> and <a href="https://github.com/ebfret/ebfret-gui/blob/master/documentation/ebfret_user_guide.pdf?raw=true">User Guide</a> for installation instructions.  </p>
+<p>The ebFRET source code (with graphical user interface) can be downloaded here [<a href="https://github.com/ebfret/ebfret-gui">git</a>; <a href="https://github.com/ebfret/ebfret-gui/releases/">zip</a>]. Please see <a href="https://github.com/ebfret/ebfret-gui/blob/master/README.md">README</a> and <a href="https://github.com/ebfret/ebfret-gui/blob/master/documentation/ebfret_user_guide.pdf?raw=true">User Guide</a> for installation instructions.  </p>
 
 <p>A command-line version of the code is also available for advanced analysis tasks, such as detection of subpopulations, which cannot be directly accomplished in the GUI [<a href="https://github.com/ebfret/ebfret-script">git</a>; <a href="https://github.com/ebfret/ebfret-script/archive/master.zip">zip</a>].</p>
 
