--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 
 <p>A command-line version of the code is also available for advanced analysis tasks, such as detection of subpopulations, which cannot be directly accomplished in the GUI [<a href="https://github.com/ebfret/ebfret-script">git</a>; <a href="https://github.com/ebfret/ebfret-script/archive/master.zip">zip</a>].</p>
 
+<p>Code to plot transition density plots (TDP) as per ``Observation and Analysis of RAD51 Nucleation Dynamics at Single-Monomer Resolution'' by Subramanyam et al. can be found [<a href="https://github.com/ebfret/TransitionDensityPlots">here</a>].</p>
+        
 <h3>
 <a id="papers" class="anchor" href="#papers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Papers</h3>
 
